@@ -3,7 +3,7 @@ NAME
     Bot::BasicBot::Pluggable
 
 VERSION
-    Version 0.07
+    Version 0.11
 
 SYNOPSIS
     This module logs all traffic in irc channels to files. Every channel is
