@@ -1,3 +1,7 @@
+2009-07-19 Mario Domgoergen <dom@math.uni-bonn.de>
+
+	* ignore_pattern gone wild because it defaulted to undef
+
 2009-07-12 Mario Domgoergen <dom@math.uni-bonn.de>
 
 	* Using new config interface of BBP
